--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Everything is possible"
+title                    : "Juncheng Li's HomePage"
 title_separator          : "-"
 name                     : "Juncheng Li"
 description              : "The personal website of Juncheng Li - 李俊诚"
